WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311365
[css-anchor-position-1] position-area can't anchor to an element positioned using anchor functions
https://bugs.webkit.org/show_bug.cgi?id=311365
Summary
[css-anchor-position-1] position-area can't anchor to an element positioned u...
Kiet Ho
Reported
2026-04-02 14:19:23 PDT
[css-anchor-position-1] position-area can't anchor to an element positioned using anchor functions
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-04-02 14:19:30 PDT
<
rdar://problem/173964030
>
Kiet Ho
Comment 2
2026-04-08 13:49:38 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62296
Kiet Ho
Comment 3
2026-04-16 11:45:37 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/59280
EWS
Comment 4
2026-04-20 11:45:14 PDT
Committed
311601@main
(8ce3ea26b295): <
https://commits.webkit.org/311601@main
> Reviewed commits have been landed. Closing PR #62296 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug