Source/WebCore/style/AnchorPositionEvaluator.cpp
@@ -814,7 +814,7 @@ CheckedPtr<RenderBoxModelObject> AnchorPositionEvaluator::findAnchorForAnchorFun
     // should also have layout information for the anchor-positioned element alongside
     // the anchors referenced by the anchor-positioned element. Until then, we cannot
     // resolve this anchor() instance.
-    if (anchorPositionedState.stage <= AnchorPositionResolutionStage::FindAnchors)
+    if (anchorPositionedState.stage < AnchorPositionResolutionStage::Resolved)
         return { };
 
     auto anchorPositionedElement = anchorPositionedElementOrPseudoElement(builderState);
@@ -822,7 +822,6 @@ CheckedPtr<RenderBoxModelObject> AnchorPositionEvaluator::findAnchorForAnchorFun
     CheckedPtr anchorPositionedRenderer = anchorPositionedElement ? anchorPositionedElement->renderer() : nullptr;
     if (!anchorPositionedRenderer) {
         // If no render tree information is present, the procedure is finished.
-        anchorPositionedState.stage = AnchorPositionResolutionStage::Resolved;
         return { };
     }
 
@@ -831,21 +830,8 @@ CheckedPtr<RenderBoxModelObject> AnchorPositionEvaluator::findAnchorForAnchorFun
     RefPtr anchorElement = anchorPositionedState.anchorElements.get(resolvedAnchorName);
     if (!anchorElement) {
         // See: https://drafts.csswg.org/css-anchor-position-1/#valid-anchor-function
-        anchorPositionedState.stage = AnchorPositionResolutionStage::Resolved;
-
         return { };
     }
-
-    // FIXME: don't use Styleable::fromElement here.
-    if (auto* state = anchorPositionedStates.get(Styleable::fromElement(*anchorElement))) {
-        // Check if the anchor is itself anchor-positioned but hasn't been positioned yet.
-        if (state->stage < AnchorPositionResolutionStage::Positioned) {
-            anchorPositionedState.stage = AnchorPositionResolutionStage::WaitingForAnchorToBePositioned;
-            return { };
-        }
-    }
-
-    anchorPositionedState.stage = AnchorPositionResolutionStage::Resolved;
 
     return dynamicDowncast<RenderBoxModelObject>(anchorElement->renderer());
 }
@@ -1278,6 +1264,8 @@ void AnchorPositionEvaluator::updateAnchorPositioningStatesAfterInterleavedLayou
     // FIXME: Make the code below oeprate on renderers (boxes) rather than elements.
     auto anchorsForAnchorName = collectAnchorsForAnchorName(document);
 
+    auto& anchorPositionedToAnchorMap = document.styleScope().anchorPositionedToAnchorMap();
+
     for (auto& [weakAnchorPositioned, state] : anchorPositionedStates) {
         auto anchorPositioned = weakAnchorPositioned.styleable();
         if (!anchorPositioned)
@@ -1301,10 +1289,13 @@ void AnchorPositionEvaluator::updateAnchorPositioningStatesAfterInterleavedLayou
                         .name = anchorNameAndElement.key
                     });
                 }
-                document.styleScope().anchorPositionedToAnchorMap().set(*anchorPositioned, AnchorPositionedToAnchorEntry {
+
+                anchorPositionedToAnchorMap.set(*anchorPositioned, AnchorPositionedToAnchorEntry {
                     .anchors = WTF::move(anchors)
                 });
             }
+
+            // Temporary stage, the loop below could adjust it to WaitingForAnchorToBePositioned.
             state->stage = AnchorPositionResolutionStage::Resolved;
             break;
         }
@@ -1322,6 +1313,59 @@ void AnchorPositionEvaluator::updateAnchorPositioningStatesAfterInterleavedLayou
         case AnchorPositionResolutionStage::Positioned:
             break;
         }
+    }
+
+    // This loop checks whether an anchor-positioned element anchors on another
+    // anchor-positioned element. If so, and the anchor isn't positioned yet,
+    // the anchor-positioned element has to wait until its anchor is positioned.
+    // This loop is done _after_ the above loop to give anchors the change to
+    // transition to Positioned.
+    for (auto& [weakAnchorPositioned, state] : anchorPositionedStates) {
+        auto anchorPositioned = weakAnchorPositioned.styleable();
+        if (!anchorPositioned)
+            continue;
+
+        // This loop should run all the time, even when an anchor-positioned is already
+        // Resolved/Positioned. It's possible an anchor it anchored to has regressed
+        // back to FindAnchors (e.g because it adds a new anchor reference after
+        // being Resolved/Positioned)
+
+        CheckedPtr anchorPositionedRenderer = anchorPositioned->renderer();
+        if (!anchorPositionedRenderer)
+            continue;
+
+        auto it = anchorPositionedToAnchorMap.find(*anchorPositioned);
+        if (it == anchorPositionedToAnchorMap.end())
+            continue;
+        auto& anchorPositionedToAnchorEntry = it->value;
+
+        bool allAnchorsPositioned = [&] () {
+            for (auto& anchor : anchorPositionedToAnchorEntry.anchors) {
+                CheckedPtr anchorRenderer = anchor.renderer;
+                if (!anchorRenderer)
+                    continue;
+
+                auto anchorElement = Styleable::fromRenderer(*anchorRenderer);
+                if (!anchorElement)
+                    continue;
+
+                if (auto anchorState = anchorPositionedStates.get(*anchorElement)) {
+                    if (anchorState->stage < AnchorPositionResolutionStage::Positioned)
+                        return false;
+                }
+            }
+
+            return true;
+        }();
+
+        if (allAnchorsPositioned) {
+            state->stage = std::max(state->stage, AnchorPositionResolutionStage::Resolved);
+            if (isLayoutTimeAnchorPositioned(anchorPositionedRenderer->style()))
+                anchorPositionedRenderer->setNeedsLayout();
+        } else
+            state->stage = AnchorPositionResolutionStage::WaitingForAnchorToBePositioned;
+
+        anchorPositionedToAnchorEntry.allAnchorsPositioned = allAnchorsPositioned;
     }
 }
 
@@ -1705,10 +1749,14 @@ CheckedPtr<RenderBoxModelObject> AnchorPositionEvaluator::defaultAnchorForBox(co
     auto it = anchorPositionedMap.find(*styleable);
     if (it == anchorPositionedMap.end())
         return nullptr;
+    auto& anchors = it->value;
+
+    if (!anchors.allAnchorsPositioned)
+        return nullptr;
 
     auto anchorName = ResolvedScopedName::createFromScopedName(styleable->element, defaultAnchorName(box.style()));
 
-    for (auto& anchor : it->value.anchors) {
+    for (auto& anchor : anchors.anchors) {
         if (anchorName == anchor.name)
             return anchor.renderer.get();
     }
